--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql:///itheima?useSSL=false
-jdbc.username=root
-jdbc.password=123456
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://111.67.192.235:3306/sfydb_6550266
+jdbc.username=sfydb_6550266
+jdbc.password=Ff123456
